Fix HTML structure and add missing elements

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
     <section class="card" aria-live="polite">
       <div class="input-row">
         <input id="newTask" type="text" maxlength="200" placeholder="What do you need to do? (Press Enter to add)" aria-label="New task" />
-        <button id="addBtn" class="btn primary" aria-label="Add task">Add</button>
+        <button id="addBtn" class="btn primary" aria-label="Add task">Add To List</button>
       </div>
 
       <div class="controls">
@@ -62,4 +62,5 @@
 
     <script src="todo.js"></script>
 </body>
+
 </html>
